# green-bites

./: README.md  conflate_data.ipynb  data_visualization.ipynb  geocode.py  pyproject.toml  scores.csv
.github/workflows/: deploy-netlify.yml
.ipynb_checkpoints/: conflate_data-checkpoint.ipynb  data_visualization-checkpoint.ipynb
climate_hack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
green-menu/: index.html  package-lock.json  package.json
green-menu/public/data/: restaurants.csv  restaurants2.csv
green-menu/src/: App.jsx
