[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-hack"
version = "0.1.0"
description = "Climate data analysis tools"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "duckdb>=1.1.3",
    "matplotlib>=3.7.5",
    "opencage>=3.0.4",
    "pandas>=2.0.3",
]

[tool.setuptools]
packages = []

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[project.optional-dependencies]
dev = ["ipykernel"]

